--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,14 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-beans.version>4.3.10.RELEASE</spring-beans.version>
+        <spring.version>4.3.10.RELEASE</spring.version>
         <commons-beanutils.version>1.9.3</commons-beanutils.version>
         <mybatis.version>3.4.5</mybatis.version>
+        <mybatis-spring.version>1.3.1</mybatis-spring.version>
         <cglib.version>3.2.5</cglib.version>
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${spring-beans.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
